refactor(port): ItemStacks